--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <title>LPH Website</title>
 </head>
 
 <body>
   <div id="root"></div>
+
+
   <script type="module" src="/src/main.jsx"></script>
+
 </body>
 
 </html>
